remake the message after execution